proyecto de prueba

--- a/package.json
+++ b/package.json
@@ -1,4 +1,39 @@
 {
   "name": "md-links",
-  "version": "0.1.0"
+  "version": "0.1.0",
+  "description": "* [1. Preámbulo](#1-preámbulo)\r * [2. Resumen del proyecto](#2-resumen-del-proyecto)\r * [3. Objetivos de aprendizaje](#3-objetivos-de-aprendizaje)\r * [4. Consideraciones generales](#4-consideraciones-generales)\r * [5. Criterios de aceptación mínimos del proyecto](#5-criterios-de-aceptación-mínimos-del-proyecto)\r * [6. Entregables](#6-entregables)\r * [7. Hacker edition](#7-hacker-edition)\r * [8. Pistas, tips y lecturas complementarias](#8-pistas-tips-y-lecturas-complementarias)\r * [9. Checklist](#9-checklist)",
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "scripts": {
+    "test": "jest --verbose --coverage",
+    "eslint": "eslint --ext .js ./src/index.js",
+    "pretest": "npm run eslint",
+    "startN": " nodemon ./src/index.js",
+    "start": "node ./src/index.js"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/paotovar/LIM014-mdlinks.git"
+  },
+  "keywords": [
+    "mdlinks"
+  ],
+  "author": "Paola Tovar",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/paotovar/LIM014-mdlinks/issues"
+  },
+  "homepage": "https://github.com/paotovar/LIM014-mdlinks#readme",
+  "devDependencies": {
+    "eslint": "^7.21.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  },
+  "dependencies": {
+    "jest": "^26.6.3",
+    "marked": "^2.0.1",
+    "nodemon": "^2.0.7"
+  }
 }
