--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "test": "jest --verbose --coverage",
     "eslint": "eslint --ext .js ./src/index.js",
     "pretest": "npm run eslint",
-    "startN": " nodemon ./src/link.js",
+    "startN": " nodemon ./src/validate.js",
     "start": "node ./src/index.js"
   },
   "repository": {
@@ -34,6 +34,7 @@
   "dependencies": {
     "jest": "^26.6.3",
     "marked": "^2.0.1",
+    "node-fetch": "^2.6.1",
     "nodemon": "^2.0.7"
   }
 }
