--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
   "name": "md-links-pao",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "Valida los links de los archivos markdown",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
-
   "bin": {
-    "md-Links": "./src/cli.js"
+    "md-Links": "src/cli.js"
   },
   "scripts": {
     "test": "jest --verbose --coverage",
