--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links-pao",
+  "name": "md-links-paotg",
   "version": "0.1.1",
   "description": "Valida los links de los archivos markdown",
   "main": "index.js",
