--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "test": "jest --verbose --coverage",
     "eslint": "eslint --ext .js ./src/utils/index.js",
     "pretest": "npm run eslint",
-    "startN": " nodemon ./src/cli.js",
+    "startN": " nodemon ./src/options.js",
     "start": "node ./src/utils/index.js"
   },
   "repository": {
