--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "fetch-mock": "^9.11.0",
+    "figlet": "^1.5.0",
     "jest": "^26.6.3",
     "marked": "^2.0.1",
     "node-fetch": "^2.6.1",
