--- a/package.json
+++ b/package.json
@@ -7,13 +7,14 @@
     "test": "test"
   },
   "bin": {
-    "md-Links": "src/cli.js"
+    "mdLinks": "./src/cli.js"
   },
   "scripts": {
     "test": "jest --verbose --coverage",
     "eslint": "eslint --ext .js ./src/utils/index.js",
     "pretest": "npm run eslint",
-    "startN": " nodemon ./src/options.js",
+    "startN": " nodemon ./src/utils/index.js",
+    "startC": " nodemon ./src/cli.js README.md",
     "start": "node ./src/utils/index.js"
   },
   "repository": {
@@ -37,7 +38,6 @@
   "dependencies": {
     "chalk": "^4.1.0",
     "fetch-mock": "^9.11.0",
-    "figlet": "^1.5.0",
     "jest": "^26.6.3",
     "marked": "^2.0.1",
     "node-fetch": "^2.6.1",
