--- a/package.json
+++ b/package.json
@@ -7,13 +7,13 @@
     "test": "test"
   },
   "bin": {
-    "mdLinks": "./src/cli.js"
+    "md-links": "./src/cli.js"
   },
   "scripts": {
     "test": "jest --verbose --coverage",
     "eslint": "eslint --ext .js ./src/utils/index.js",
     "pretest": "npm run eslint",
-    "startN": " nodemon ./src/utils/index.js",
+    "startN": " nodemon ./src/utils/link.js",
     "startC": " nodemon ./src/cli.js README.md",
     "start": "node ./src/utils/index.js"
   },
