--- a/package.json
+++ b/package.json
@@ -1,13 +1,13 @@
 {
   "name": "md-links-paotg",
-  "version": "0.1.4",
+  "version": "0.1.5",
   "description": "Valida los links de los archivos markdown",
   "main": "index.js",
   "directories": {
     "test": "test"
   },
   "bin": {
-    "md-links": "./src/cli.js"
+    "md-links": "src/cli.js"
   },
   "scripts": {
     "test": "jest --verbose --coverage",
